Online job portal completed.

--- a/WebApplication2/Views/Home/Privacy.cshtml
+++ b/WebApplication2/Views/Home/Privacy.cshtml
@@ -1,6 +1,34 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "About Us";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="~/Image/2.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+</div> <br>
+<div class="container">
+  <!-- Content here -->
+  <p> Technology has changed the way job seekers search for jobs and employers find qualified employees.
+      While employers still advertise job openings through traditional advertising mediums, such as local newspapers
+      and magazines, today employers and job seekers turn to online job portals to find employment matches. 
+      Job seekers can advertise their skills and search for available positions, and employers can announce 
+      employment openings through job portals such as Monster, Career Builders and USA Jobs, for federal government
+      positions.
+
+</p>
+<p>Job portals provide a centralized location for employers to post information about job openings. 
+    The majority of employment portals require a fee for employers to post job openings and respond to resumes, 
+    with varying terms depending on the job portal. Employers can browse through job seekers' resumes to find
+    potential matches for job openings. Job portals offer worldwide access for job seekers to view advertisements, 
+    
+    providing employers with a wider variety of applicants and a broader candidate pool. Employers can utilize 
+    portal matching technology, allowing the system to find potential matches for employment openings. Sites can 
+    also feature partnerships with daily and weekly newspapers, providing print and online job advertising for
+    employers. Individual job portals often maintain partnerships with other, industry-specific employment websites
+    , offering advertising throughout a network 
+of partners. </p>
+</div>
