--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -1,44 +1,54 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 } 
-
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+<div class="container-wrap row">
+  <h1 class="page-title text-center">Job Portal</h1>
+  <hr/>
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="~/images/1.jpg" class="d-block w-100" alt="...">
+      <img src="~/Image/1.jpg" class="d-block w-100" alt="...">
     </div>
+   
   </div>
+  <br><br><br>
 </div>
-<div class="container">
+  <div class="container">
       <div class="row">
-          <div class="col-md-6">
-        <img class="lefty" src="~/images/4.jpg" alt="Student Attendance Management System" style="height: 400px"/>
-        </div>
         <div class="col-md-6">
-        <p class="mt-3">Attendance is one of those administrative tasks that must be done at the start of each class. It can 
-        take up valuable time at the beginning of class and sometimes be difficult to manage. Attendance books 
-        traditionally are big grids with tiny squares that are hard to read and can be easy to make errors in. 
-        With QuickSchools' Online Student Information System (also known as Online School Management System), 
-        taking and managing attendance is no longer a hassle with our easy to use and robust school attendance 
-        system.
-        </p>
-        
-        <p>The easy to use online student attendance system designed by QuickSchools make taking attendance 
-          quick and less prone to errors. Record a student’s attendance on the colored chart with a click of 
-          the mouse. The information pertaining to the student attendance can then be immediately shared with 
-          parents via cloud (i.e., online) to help them keep track of their students via our online school 
-          management system.
-        </p>
-        </div>
-        <img class="righty" src=~/images/4.png alt="School Attendance System"/>
-        
+            <img class="lefty" src="~/Image/5.jpg" alt="Student Attendance Management System" width="500" height="300"/>
+        </div> 
+        <br>
+        <div class="col-md-6">
+            <p class="mt-3">A job portal, also known as a career portal, is a modern name for an online 
+            job board that helps applicants find jobs and aids employers in their quest to locate ideal 
+            candidates. Career websites, such as Monster, Indeed and SimplyHired, have job portals that 
+            offer a broad range of jobs in a vast number of fields. Some government agencies, nonprofit 
+            organizations, universities and private businesses have their own job portals that applicants
+            can access on the organization's website.
 
+
+            </p>
+        
+            <p>The easy to use online Job Portal system designed by US make taking acessing jobs 
+          quick and less prone to errors. add the job  on the colored chart with a click of 
+          the mouse.online Job Portal system designed by US make taking acessing jobs 
+          quick and less prone to errors. add the job  on the colored chart with a click of 
+          the mouse. 
+             </p>
+        </div>
+ 
+        <br><br><br>
+        <img class="righty" src=~/Image/9.jpg alt="Jpb Portal System" width="700" height="300"/>
+        
+        <br> <br><br>
+        
         <h3>Easy to Read Pages</h3>
-        <p>With our online school management system, working with an attendance chart has never been so easy. 
-          Colorful headers; wide, shaded rows; and a clean, large font make reading your class attendance 
-          rooster easier than ever. Online attendance is more efficient for teachers, too. Simply click a 
-          button to indicate a student’s presence or absence. No more trying to make a small mark in an even 
-          smaller square. The bright and clean pages make managing and maintaining your attendance records a 
+        <p>With our Job Portal system, working with an job chart has never been so easy. 
+          Colorful headers; wide, shaded rows; and a clean, large font make reading your job handling 
+          rooster easier than ever. Job paortal is more efficient for admin and users, too. Simply click a 
+          button to add a Job and view a job and edit a job. No more trying to make a small mark in an even 
+          smaller square. The bright and clean pages make managing and maintaining your job  records a 
           breeze.
       </div>
   </div>
